--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -49,7 +49,7 @@
             android:exported="false" />
 
         <activity
-            android:name=".screen.player.PlayerActivity"
+            android:name=".screen.home.player.PlayerActivity"
             android:exported="false" />
 
         <activity android:name=".screen.home.MainActivity"
